add assortimentLink param
